--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" href="css/dashboard.css" /> -->
+    <link rel="stylesheet" href="css/dashboard-media.css" />
     <link rel="stylesheet" href="css/dashboard-style.css" />
 
 </head>
@@ -41,6 +43,8 @@
             <img src="images/downward-arrow.svg" id="down-arrow" />
         </div>
     </div>
+
+    <img src="images/downward-arrow.svg" id="close-arrow">
 </nav>
 
 
@@ -108,6 +112,15 @@
             <img src="images/setting-default.svg" class="dashboard-item--icon" />
             <span>Settings</span>
         </div>
+
+
+
+        <div class="dashboard-item" class="profile-in-slidebar">
+            <img src="images/profile.png" class="dashboard-item--icon profile-in-slidebar"/>
+            <span class="profile-in-slidebar">John Doe</span>
+        </div>
+        <span class="profile-in-slidebar"><img src="images/downward-arrow.svg" alt=""></span>
+
 
 
 
